jcc_files/alike.java
/* alike.java */
/* Generated By:JavaCC: Do not edit this line. alike.java */
package traductor;

import lib.symbolTable.*;
import lib.symbolTable.exceptions.*;
import lib.attributes.*;
import java.util.ArrayList;
import lib.errores.ErrorSemantico;
import lib.tools.codeGeneration.CodeBlock;
import lib.tools.codeGeneration.PCodeInstruction.OpCode;

//...

public class alike implements alikeConstants {
   //...

   static SymbolTable st;

        private static void initSymbolTable() {
                boolean b;
                String[] palsRes = {
                "boolean","char","character", "integer", "null", "array",
                        "mod", "not", "and", "or",
                        "if", "elsif", "else", "then", "while", "loop", "true", "false",
                        "procedure", "function", "is", "ref", "of", "begin", "end", "return",
                        "skip_line", "put", "put_line", "get", "char2int", "int2char"
                };

                //st.insertReservedWords(palsRes);
        }

        private static void iterarYanadirEnTablaDeSimbolos(ArrayList<Token> ids, Attributes at){
                Symbol s = null;
                for (Token t : ids) {
                        if (at.isArray) {
                                s = new SymbolArray(t.image, at.intList.get(0), at.intList.get(1), at.type, at.parClass);
                                at.parList.add(s);
                        }
                        else {
                                if (at.type == Symbol.Types.BOOL) {
                                        s = new SymbolBool(t.image, at.parClass);
                                        at.parList.add(s);
                                }
                                else if (at.type == Symbol.Types.INT) {
                                        s = new SymbolInt(t.image, at.parClass);
                                        at.parList.add(s);
                                }
                                else if (at.type == Symbol.Types.CHAR) {
                                        s = new SymbolChar(t.image, at.parClass);
                                        at.parList.add(s);
                                }
                        }
                        try {
                                st.insertSymbol(s);
                        }
                        catch(AlreadyDefinedSymbolException e) {
                                System.err.println("Already Defined: " + e.getMessage());
                        }
                }
        }

   public static void main(String[] args) {
           alike parser = null;
           Attributes at = new Attributes();

                st = new SymbolTable();
        initSymbolTable();

           try {
                   if(args.length == 0) {
                           parser = new alike(System.in);
                   }
                   else {
                           parser = new alike(new java.io.FileInputStream(args[0]));
                   }
                   //Programa es el símbolo inicial de la gramática
                   parser.Programa(at);
                   // hacer print de at.code
                   System.out.println("***** An\u00e1lisis terminado con \u00e9xito *****");
           }
           catch (java.io.FileNotFoundException e) {
                   System.err.println ("Fichero " + args[0] + " no encontrado.");
           }
           catch (TokenMgrError e) {
                   System.err.println("LEX_ERROR: " + e.getMessage());

           }
           catch (ParseException e) {
                        System.err.println("Parse_exception: " + e.getMessage());
           }
           //...
   }

//------------ Símbolo inicial de la gramática. Para análisis léxico no hace falta más
/*void Programa() : 
{
	//Token t;
}
{
   ( 
	   < tBEGIN >
	   | 
	   < tBOOL > | < tCHAR > | < tCHARACTER > | < tINTEGER > | < tNULL > | < tARRAY > | < tCONST_INT > | < tCONST_CHAR > | < tCONST_STRING > 
	   |
	   < tASIGN > | < tSUM > | < tRES > | < tEQU > | < tGT > | < tLT > | < tGE > | < tLE > | < tMUL > | < tMOD > | < tDIV > | < tNOT > | < tDIF > | < tAND > | < tOR >
	   |
	   < tIF > | < tELIF > |	< tTHEN > |	< tWHILE > | < tLOOP > | < tTRUE > | < tFALSE > | <tELSE>
	   |
	   < tPROCEDURE > | < tIS > | < tREF > | < tEND > | < tRETURN > | < tOF > | <tFUNCTION>
	   |
	   < tSKIP_LN > | < tPUT > | < tPUT_LN > | < tGET > | <tCHAR2INT> | <tINT2CHAR> 
	   |
	   < tPUNTO > |	< tCOMA > |	< tDOSPUNTOS > | < tDOBLEPUNTO > | < tPUNTOCOMA > |	< tCORCHETES_OPEN > | < tCORCHETES_CLOSE > | < tPARENTESIS_OPEN > |	< tPARENTESIS_CLOSE > | < tID >
   )+
   < EOF >
}*/
  static final public 

void Programa(Attributes at) throws ParseException {Token t;
        Attributes at1 = new Attributes();
    jj_consume_token(tPROCEDURE);
    t = jj_consume_token(tID);
Symbol s;
                at1.parList = new ArrayList<Symbol>();
                s = new SymbolProcedure(t.image,at1.parList,true);
                try {
                        st.insertSymbol(s);
                }
                catch (AlreadyDefinedSymbolException e) {
                        ErrorSemantico.deteccion(e, t.image);
                }
    jj_consume_token(tIS);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tID:{
      declaracion_variables();
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tPROCEDURE:
    case tFUNCTION:{
      declaracion_procs_funcs();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(tBEGIN);
    instrucciones();
    jj_consume_token(tEND);
    jj_consume_token(tPUNTOCOMA);
System.err.println(st.toString());
                st.removeBlock();
    jj_consume_token(0);
}

  static final public void declaracion_procs_funcs() throws ParseException {
    label_1:
    while (true) {
      declaracion_proc_func();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tPROCEDURE:
      case tFUNCTION:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_1;
      }
    }
}

  static final public void declaracion_proc_func() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tPROCEDURE:{
      declaracion_proc();
      break;
      }
    case tFUNCTION:{
      declaracion_func();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void declaracion_func() throws ParseException {Attributes at = new Attributes();
    cabecera_funcion(at);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tID:{
      declaracion_variables();
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    jj_consume_token(tBEGIN);
    instrucciones_return();
    jj_consume_token(tEND);
    jj_consume_token(tPUNTOCOMA);
System.err.println(st.toString());
                st.removeBlock();
}

  static final public void declaracion_proc() throws ParseException {Attributes at = new Attributes();
    cabecera_procedimiento(at);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tID:{
      declaracion_variables();
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(tBEGIN);
    instrucciones();
    jj_consume_token(tEND);
    jj_consume_token(tPUNTOCOMA);
System.err.println(st.toString());
                st.removeBlock();
}

  static final public ArrayList<Token> lista_ids() throws ParseException {ArrayList<Token> ids = new ArrayList<Token>();
        Token t;
    t = jj_consume_token(tID);
ids.add(t);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tCOMA:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_2;
      }
      jj_consume_token(tCOMA);
      t = jj_consume_token(tID);
ids.add(t);
    }
{if ("" != null) return ids;}
    throw new Error("Missing return statement in function");
}

  static final public void declaracion_variables() throws ParseException {
    label_3:
    while (true) {
      declaracion_var();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tID:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
    }
}

  static final public void declaracion_variables_puntocoma() throws ParseException {Attributes at = new Attributes();
    label_4:
    while (true) {
      declaracion_var_puntocoma(at);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tID:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_4;
      }
    }
}

  static final public void tipo_variable(Attributes at) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tBOOL:{
      jj_consume_token(tBOOL);
at.type = Symbol.Types.BOOL;
      break;
      }
    case tCHAR:{
      jj_consume_token(tCHAR);
at.type = Symbol.Types.CHAR;
      break;
      }
    case tCHARACTER:{
      jj_consume_token(tCHARACTER);
at.type = Symbol.Types.CHAR;
      break;
      }
    case tINTEGER:{
      jj_consume_token(tINTEGER);
at.type = Symbol.Types.INT;
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void rango(Attributes at) throws ParseException {Token t1, t2;
    t1 = jj_consume_token(tCONST_INT);
    jj_consume_token(tDOSPUNTOS);
    t2 = jj_consume_token(tCONST_INT);
Integer inicio,fin;
                inicio = Integer.valueOf(t1.image);
                fin = Integer.valueOf(t2.image);
                if(inicio > fin) {
                        ErrorSemantico.deteccion("Rango invalido");
                }
                else {
                        at.intList.add(inicio);
                        at.intList.add(fin);
                }
}

  static final public void estructura_array(Attributes at) throws ParseException {
    jj_consume_token(tARRAY);
    jj_consume_token(tPARENTESIS_OPEN);
    rango(at);
    jj_consume_token(tPARENTESIS_CLOSE);
    jj_consume_token(tOF);
    tipo_variable(at);
at.isArray = true;
                // Faltarían más cosas de atribuir a at?

}

  static final public void declaracion_var_puntocoma(Attributes at) throws ParseException {ArrayList<Token> ids;
        Attributes at1 = new Attributes(), at2 = new Attributes();
        Symbol s;
    ids = lista_ids();
    jj_consume_token(tDOBLEPUNTO);
at1.parClass = Symbol.ParameterClass.VAL;
                at2.parClass = Symbol.ParameterClass.VAL;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tREF:{
      jj_consume_token(tREF);
at1.parClass = Symbol.ParameterClass.REF;
                at2.parClass = Symbol.ParameterClass.REF;
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tBOOL:
    case tCHAR:
    case tCHARACTER:
    case tINTEGER:{
      tipo_variable(at1);
iterarYanadirEnTablaDeSimbolos(ids,at1);
                  at.parList = at1.parList;
      break;
      }
    case tARRAY:{
      estructura_array(at2);
iterarYanadirEnTablaDeSimbolos(ids,at2);
                  at.parList = at2.parList;
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void declaracion_var() throws ParseException {ArrayList<Token> ids;
        Attributes at1 = new Attributes(), at2 = new Attributes();
    ids = lista_ids();
    jj_consume_token(tDOBLEPUNTO);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tBOOL:
    case tCHAR:
    case tCHARACTER:
    case tINTEGER:{
      tipo_variable(at1);
iterarYanadirEnTablaDeSimbolos(ids,at1);
      break;
      }
    case tARRAY:{
      estructura_array(at2);
iterarYanadirEnTablaDeSimbolos(ids,at2);
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(tPUNTOCOMA);
}

  static final public void lista_parametros_funcion_o_proc(Attributes at) throws ParseException {Attributes at1 = new Attributes(), at2 = new Attributes();
    declaracion_var_puntocoma(at1);
for (Symbol s : at1.parList) {
                        at.parList.add(s);
                }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tPUNTOCOMA:{
        ;
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        break label_5;
      }
      jj_consume_token(tPUNTOCOMA);
      declaracion_var_puntocoma(at2);
for (Symbol s : at2.parList) {
                                at.parList.add(s);
                        }
    }
}

  static final public void cabecera_procedimiento(Attributes at) throws ParseException {Token t;
        Attributes at1 = new Attributes(), at2 = new Attributes();
    jj_consume_token(tPROCEDURE);
    t = jj_consume_token(tID);
Symbol s;
                at.parList = new ArrayList<Symbol>();
                s = new SymbolProcedure(t.image,at.parList);
                try {
                        st.insertSymbol(s);
                        st.insertBlock();
                }
                catch (AlreadyDefinedSymbolException e) {
                        ErrorSemantico.deteccion(e,t.image);
                }

                at2.parList = at1.parList;
    jj_consume_token(tPARENTESIS_OPEN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tID:{
      lista_parametros_funcion_o_proc(at2);
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
try {
                        Symbol aux = st.getSymbol(t.image);
                        if (aux instanceof SymbolProcedure) {
                                //System.err.println("Procedimiento");
                                SymbolProcedure procedure = (SymbolProcedure) aux;
                                procedure.parList = at2.parList;
                        }
                }
                catch (SymbolNotFoundException e) {
                        ErrorSemantico.deteccion(e,t.image);
                }
    jj_consume_token(tPARENTESIS_CLOSE);
    jj_consume_token(tIS);
}

  static final public void cabecera_funcion(Attributes at) throws ParseException {Token t;
        Attributes at1 = new Attributes(), at2 = new Attributes();
    jj_consume_token(tFUNCTION);
    t = jj_consume_token(tID);
Symbol s;
                at.parList = new ArrayList<Symbol>();
                s = new SymbolFunction(t.image, at.parList, at1.type);
                try {
                        st.insertSymbol(s);
                        st.insertBlock();
                }
                catch (AlreadyDefinedSymbolException e) {
                        ErrorSemantico.deteccion(e,t.image);
                }
                at2.parList = at.parList;
    jj_consume_token(tPARENTESIS_OPEN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tID:{
      lista_parametros_funcion_o_proc(at2);
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    jj_consume_token(tPARENTESIS_CLOSE);
    jj_consume_token(tRETURN);
    tipo_variable(at1);
    jj_consume_token(tIS);
try {
                        Symbol aux = st.getSymbol(t.image);
                        if (aux instanceof SymbolFunction) {
                                //System.err.println("Funcion");
                                SymbolFunction funcion = (SymbolFunction) aux;
                                funcion.returnType = at1.type;
                                funcion.parList = at2.parList;
                        }
                }
                catch (SymbolNotFoundException e) {
                        ErrorSemantico.deteccion(e, t.image);
                }
}

  static final public void inst_leer() throws ParseException {ArrayList<Token> ids;
    jj_consume_token(tGET);
    jj_consume_token(tPARENTESIS_OPEN);
    ids = lista_ids();
for(Token t : ids) {
                        try {
                                Symbol s = st.getSymbol(t.image);
                                if (!((s.type == Symbol.Types.CHAR) || (s.type == Symbol.Types.INT))) {
                                        ErrorSemantico.deteccion("Se esperaba caracter o entero <inst_leer>");
                                }
                        }
                        catch(SymbolNotFoundException e){
                                ErrorSemantico.deteccion(e, t.image);
                        }
                }
    jj_consume_token(tPARENTESIS_CLOSE);
}

  static final public void inst_saltar_linea() throws ParseException {
    jj_consume_token(tSKIP_LN);
}

  static final public void inst_escribir() throws ParseException {ArrayList<Attributes> ats = new ArrayList<Attributes>();
    jj_consume_token(tPUT);
    jj_consume_token(tPARENTESIS_OPEN);
    lista_una_o_mas_exps(ats);
for (Attributes at : ats) {
                        if (!((at.type == Symbol.Types.INT) || (at.type == Symbol.Types.BOOL) ||
                              (at.type == Symbol.Types.CHAR) || (at.type == Symbol.Types.STRING))) {
                                ErrorSemantico.deteccion("Se esperaba entero, booleano, caracter o string <inst_escribir>");
                        }
                }
    jj_consume_token(tPARENTESIS_CLOSE);
}

  static final public void inst_escribir_linea() throws ParseException {ArrayList<Attributes> ats = new ArrayList<Attributes>();
    jj_consume_token(tPUT_LN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tPARENTESIS_OPEN:{
      jj_consume_token(tPARENTESIS_OPEN);
      lista_una_o_mas_exps(ats);
for (Attributes at : ats) {
                        if (!((at.type == Symbol.Types.INT) || (at.type == Symbol.Types.BOOL)
                        || (at.type == Symbol.Types.CHAR) || (at.type == Symbol.Types.STRING))) {
                                System.err.println(at.type);
                                ErrorSemantico.deteccion("Se esperaba entero, booleano, caracter o string <inst_escribir_linea>");
                        }
                }
      jj_consume_token(tPARENTESIS_CLOSE);
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      ;
    }
}
